# jorge-a-day.fi

./: .gitignore  Cargo.toml  LICENSE  readme.md
src/: api.rs  api_schema.rs  cache.rs  config.rs  image.rs  main.rs  web_gui.rs
src/endpoints/: api.rs  mod.rs  schema.rs  ui.rs
src/endpoints/api/: mod.rs  routes.rs
src/endpoints/ui/: mod.rs  pages.rs  routes.rs
src/image_cache/: cache.rs  image.rs
templates/: about.html.j2  gallery.html  gallery.html.j2
