[package]
name = "jorge_api"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", features = ["openssl"] }
anyhow = "1.0.98"
askama = "0.14.0"
async-std = "1.13.1"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
confique = { version = "0.3.0", features = ["toml"] }
env_logger = "0.11.8"
imghdr = "0.7.0"
log = "0.4.27"
notify = "8.1.0"
openssl = "0.10.73"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.46.1", features = ["fs", "macros", "time"] }
toml = "0.8.23"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
